[package]
name = "rnz"
version = "0.0.2-alpha"
edition = "2021"
authors = ["seska@seska.io"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.5"
indicatif = "0.17.0-beta.1"
tracing = "0.1"
tracing-subscriber = "0.2"
url = "2.2.2"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
regex = "1.5.4"
console = "0.15.0"
bitflags = "1.3.2"
string-builder = "0.2.0"
timeago = "0.3.0"
rand = "0.8.4"
chrono = "0.4.19"
colored = "2.0.0"
threadpool = "1.8.1"
uuid = { version="1.0.0-alpha.1", features = ["v4", "v5"] }
spinners = "2.0.0"
rayon = "1.5.1"
crossbeam = "0.8.1"